--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   "dependencies": {
     "@tonejs/midi": "^2.0.28",
     "tone": "^15.1.22",
-    "wave-roll": "file:../wave-roll"
+    "wave-roll": "0.3.0-next.1"
   }
 }
