--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Package extension
-        run: pnpm dlx @vscode/vsce package
+        run: pnpm dlx @vscode/vsce package --no-dependencies
 
       - name: Extract changelog for version
         id: changelog
