--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "VS Code Extension for multi-file MIDI piano-roll visualization and playback (powered by wave-roll)",
   "publisher": "crescent-stdio",
   "version": "0.4.0",
-  "icon": "icon.jpg",
+  "icon": "icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/crescent-stdio/wave-roll-studio"
