--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wave-roll-studio",
   "displayName": "WaveRoll Studio - MIDI Player & Viewer",
-  "description": "VS Code Extension for multi-file MIDI piano-roll visualization and playback (powered by wave-roll)",
+  "description": "Comparative MIDI Piano-Roll Visualization & Playback Extension (powered by wave-roll)",
   "publisher": "crescent-stdio",
   "version": "0.4.0",
   "icon": "icon.png",
@@ -15,6 +15,14 @@
   "categories": [
     "Visualization",
     "Other"
+  ],
+  "keywords": [
+    "music",
+    "midi",
+    "piano-roll",
+    "midi-visualisation",
+    "audio",
+    "visualization"
   ],
   "main": "./dist/extension/extension.js",
   "activationEvents": [],
@@ -44,6 +52,7 @@
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/vscode": "^1.80.0",
+    "@vscode/vsce": "^3.7.1",
     "esbuild": "^0.20.0",
     "typescript": "^5.0.0",
     "vite": "^7.2.6"
